[package]
name = "rpdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.4.5", package = "gtk4", features = ["v4_6"]}
anyhow = "1.0.53"
regex = "1.5.4"
ureq = "2.4.0"
urlencoding = "2.1.0"